<resources>
    <string name="app_name">FoodEat</string>
    <string name="panier">Panier</string>
    <string name="items_total">Prix Nourriture :</string>
    <string name="frais">Frais de livraison :</string>
    <string name="tax">Tax :</string>
    <string name="total">Total :</string>
    <string name="prix">0$</string>
    <string name="button_panier">Payer</string>
    <string name="connexion">UserName :</string>
    <string name="password">Password :</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prenom :</string>
    <string name="email">Email :</string>
    <string name="adresse">Adresse :</string>
    <string name="image">Image :</string>
    <string name="inscription1">Pas encore inscrit ? </string>
    <string name="inscription2">Cliquez ici pour vous inscrire!</string>
    <string name="inscription3">S\'inscrire </string>
    <string name="validation_profil">Valider les modifications</string>
</resources>