<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTitrePanier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/panier"
        android:textColor="@color/darkgrey"
        android:textSize="26dp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listPanier"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        tools:listitem="@layout/item_panier">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTotalNourriture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:text="@string/items_total" />

        <TextView
            android:id="@+id/textViewPrixNourriture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:textStyle="bold"
            android:text="@string/prix" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewFraisLivraison"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:text="@string/frais" />

        <TextView
            android:id="@+id/textViewPrixFrais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:textStyle="bold"
            android:text="@string/prix" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:text="@string/tax" />

        <TextView
            android:id="@+id/textViewPrixTax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:textStyle="bold"
            android:text="@string/prix" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textSize="22dp"
            android:text="@string/total" />

        <TextView
            android:id="@+id/textViewPrixTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:textStyle="bold"
            android:text="@string/prix" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonPayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/grey_button2"
        android:text="@string/button_panier" />
</LinearLayout>